stylized about-us

--- a/index.html
+++ b/index.html
@@ -235,20 +235,22 @@
       <div class="about__us">
         <h3 class="about__us-title">Компания «Техномарт»</h3>
         <p class="about__us-subtitle">Настоящий мужской шоппинг начинается здесь! Огромный выбор товаров для ремонта и
+          <br>
           строительства не оставит равнодушными любителей сэкономить на гастарбайтерах.</p>
-        <p class="about__us-transportation">Мы можем доставить ваш товар в самые отдаленные точки России! Техномарт
+        <p class="about__us-transportation">Мы можем доставить ваш товар в самые отдаленные точки России! <br>
+          Техномарт
           работает
           со многими транспортными компаниями: </p>
         <ul class="company-transportation">
           <li class="company-transportation__item">Деловые линии</li>
           <li class="company-transportation__item">Автотрейдинг</li>
-          <li class="company-transportation__item">ЖелДорЖкспедиция</li>
+          <li class="company-transportation__item">ЖелДорЭкспедиция</li>
         </ul>
         <a href="#" class="about__us-read-more">Подробнее о компании</a>
       </div>
       <div class="about__contacts">
         <h3 class="about__contacts-title">Контакты</h3>
-        <p class="about__contacts-pick-up">Вы можете забрать товар сами,заехав в наш офис:</p>
+        <p class="about__contacts-pick-up">Вы можете забрать товар сами,<br>заехав в наш офис:</p>
         <img class="about__map" src="img/map-small.jpg" width="300" height="158" alt="г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8">
         <button class="about__contacts-write-us">Заблудились? Напишите нам!</button>
       </div>
@@ -271,37 +273,41 @@
     </section>
   </main>
   <footer class="footer">
-    <div class="footer__top container">
-      <div class="footer__top_left">
-        <a class="footer__top-logo">Техномарт</a>
-        <p class="footer__top-address">г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8 +7 (812) 555-05-55</p>
-      </div>
-      <div class="footer__top_right">
-        <ul class="footer__top-navigation">
-          <li class="footer__top-navigation-item"><a href="#" class="footer__top-navigation-link">Компания</a></li>
-          <li class="footer__top-navigation-item"><a href="#" class="footer__top-navigation-link">Новости</a></li>
-          <li class="footer__top-navigation-item"><a href="catalog.html" class="footer__top-navigation-link">Каталог</a></li>
-          <li class="footer__top-navigation-item"><a href="#" class="footer__top-navigation-link">Доставка</a></li>
-          <li class="footer__top-navigation-item"><a href="#" class="footer__top-navigation-link">Контакты</a></li>
-        </ul>
-        <ul class="footer__bottom-navigation">
-          <li class="footer__bottom-navigation-item"><a href="#" class="footer__bottom-navigation-link">Материалы</a></li>
-          <li class="footer__bottom-navigation-item"><a href="#" class="footer__bottom-navigation-link">Техника</a></li>
-          <li class="footer__bottom-navigation-item"><a href="#" class="footer__bottom-navigation-link">Инструмент</a></li>
-          <li class="footer__bottom-navigation-item"><a href="#" class="footer__bottom-navigation-link">Спецпредложения</a></li>
-        </ul>
+    <div class="footer-wrapper-top">
+      <div class="footer__top container">
+        <div class="footer__top_left">
+          <a class="footer__top-logo">Техномарт</a>
+          <p class="footer__top-address">г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8 +7 (812) 555-05-55</p>
+        </div>
+        <div class="footer__top_right">
+          <ul class="footer__top-navigation">
+            <li class="footer__top-navigation-item"><a href="#" class="footer__top-navigation-link">Компания</a></li>
+            <li class="footer__top-navigation-item"><a href="#" class="footer__top-navigation-link">Новости</a></li>
+            <li class="footer__top-navigation-item"><a href="catalog.html" class="footer__top-navigation-link">Каталог</a></li>
+            <li class="footer__top-navigation-item"><a href="#" class="footer__top-navigation-link">Доставка</a></li>
+            <li class="footer__top-navigation-item"><a href="#" class="footer__top-navigation-link">Контакты</a></li>
+          </ul>
+          <ul class="footer__bottom-navigation">
+            <li class="footer__bottom-navigation-item"><a href="#" class="footer__bottom-navigation-link">Материалы</a></li>
+            <li class="footer__bottom-navigation-item"><a href="#" class="footer__bottom-navigation-link">Техника</a></li>
+            <li class="footer__bottom-navigation-item"><a href="#" class="footer__bottom-navigation-link">Инструмент</a></li>
+            <li class="footer__bottom-navigation-item"><a href="#" class="footer__bottom-navigation-link">Спецпредложения</a></li>
+          </ul>
+        </div>
       </div>
     </div>
-    <div class="footer__bottom">
-      <div class="container">
-        <p class="footer__bottom-copyright">© 2010–2019 Компания «Техномарт» Все права защищены</p>
-        <ul class="footer__bottom-social">
-          <li class="footer__bottom-social-item"><a href="#" class="footer__bottom-social-link" aria-label="Техномарт в ВКонтакте"></a></li>
-          <li class="footer__bottom-social-item"><a href="#" class="footer__bottom-social-link" aria-label="Техномарт в Facebook"></a></li>
-          <li class="footer__bottom-social-item"><a href="#" class="footer__bottom-social-link" aria-label="Техномарт в Instagram"></a></li>
-        </ul>
-        <p class="footer__bottom-communication">Обратная связь: <a href="#" class="footer__bottom-communication-link">mail@htmlacademy.ru</a></p>
-        <p class="footer__bottom-developed">Разработано: <a href="https://htmlacademy.ru/intensive/htmlcss" class="footer__bottom-developed-link">htmlacademy.ru</a></p>
+    <div class="footer-wrapper-bottom">
+      <div class="footer__bottom">
+        <div class="container">
+          <p class="footer__bottom-copyright">© 2010–2019 Компания «Техномарт» Все права защищены</p>
+          <ul class="footer__bottom-social">
+            <li class="footer__bottom-social-item"><a href="#" class="footer__bottom-social-link" aria-label="Техномарт в ВКонтакте"></a></li>
+            <li class="footer__bottom-social-item"><a href="#" class="footer__bottom-social-link" aria-label="Техномарт в Facebook"></a></li>
+            <li class="footer__bottom-social-item"><a href="#" class="footer__bottom-social-link" aria-label="Техномарт в Instagram"></a></li>
+          </ul>
+          <p class="footer__bottom-communication">Обратная связь: <a href="#" class="footer__bottom-communication-link">mail@htmlacademy.ru</a></p>
+          <p class="footer__bottom-developed">Разработано: <a href="https://htmlacademy.ru/intensive/htmlcss" class="footer__bottom-developed-link">htmlacademy.ru</a></p>
+        </div>
       </div>
     </div>
   </footer>
